<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uclv_grasp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="marco1998.mds@gmail.com">marco</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>uclv_grasp_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>depth_optimization_interfaces</depend>
  <depend>uclv_utilities</depend>
  <depend>uclv_moveit_planner_interface</depend>
  <depend>uclv_moveit_planner_ros2</depend>

  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
